--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@
 *.idb
 *.pdb
 
+# Output files
+*.ind
+*.ld
+
 # Kernel Module Compile Results
 *.mod*
 *.cmd
@@ -58,6 +62,9 @@ dkms.conf
 # SES Build directories
 ./examples/*/*/Output/*
 ./examples/*/*/Output
+
+# SES IDE files
+*.emSession
 
 # Arm project user dependant file 
 ./examples/*/*.uvguix.*
